# LabelEval

./: .gitignore  eval_analysis.py  label_evaluation.py  label_retriever.py  main.py  pyproject.toml  query_labels.py  run.sh
configs/: config_template.yaml  label_config.py
judge_prompts/: default_prompts.yaml
