[project]
name = "labeleval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "ipython>=8.38.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "vllm>=0.17.1",
]

[tool.uv]
override-dependencies = [
    "opencv-python<=4.12.0.88",
    "opencv-python-headless<=4.12.0.88"
]
